# F5-TTS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/audio/: __init__.py  mastering.py  playback.py
app/models/: __init__.py  project.py  settings.py
app/services/: f5_tts_service.py  import_compat.py  settings_service.py
app/text/: __init__.py  preprocessing.py
app/ui/: main_window.py  theme.py
app/utils/: logging.py  paths.py
app/voices/: __init__.py  library.py
app/workers/: job_queue.py  synthesis_worker.py
tests/: test_import_compat.py  test_main_window.py  test_preprocessing.py  test_settings_service.py
