[project]
name = "f5narrator"
version = "0.1.0"
description = "Local-first PySide6 desktop narration studio powered by F5-TTS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8,<7",
    "f5-tts>=1.1.21",
    "numpy>=1.26",
    "soundfile>=0.12",
    "scipy>=1.12",
    "pydub>=0.25",
    "torch>=2.0",
    "torchaudio>=2.0",
    "faster-whisper>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
